--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.4
+Date: 27. 05. 2018
+  Bugfixes:
+    - Fix multiplayer bug.
+---------------------------------------------------------------------------------------------------
 Version: 0.16.3
 Date: 19. 02. 2018
   Bugfixes:
@@ -9,7 +14,7 @@ Date: 26. 02. 2018
   Changes:
     - Multiplayer compatibility.
   Bugfixes:	
-	- Fix multiplayer bug
+    - Fix multiplayer bug
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.1
 Date: 27. 12. 2017
